windows/cpp/esc_printer.h

extern "C" {
void initialize_printer();
void print_text(const char* text);
void cut_paper();
}